# GameCPP

./: .clang-format  CMakeLists.txt  README.md  config.ini  imgui.ini
.history/src/: PlayState_20251024223138.cpp  PlayState_20251024225458.cpp  PlayState_20251024225522.cpp  PlayState_20251025024802.cpp  PlayState_20251025115755.cpp  PlayState_20251025142339.cpp
SDL_ttf/: Makefile  cmake_install.cmake
include/: Animation.h  Game.h  GameOverState.h  GameState.h  MenuState.h  PauseState.h  PlayState.h  SettingsState.h
include/core/: Animation.h  Audio.h  Background.h  Button.h  Config.h  FindTarget.h  Game.h  GameState.h  HPBar.h  IEnitity.h  Image.h  TextBox.h  Timer.h  Transform.h  Vector2.h
include/entities/: Arrow.h  Castle.h  Demon.h  Dragon.h  EntityState.h  FindTarget.h  FireAttack.h  FireAttackD.h  FireAttackS.h  Fire_Attack.h  IEnitity.h  Jinn.h  Lizard.h  Magic_Attack.h  Medusa.h  Orc1.h  Orc2.h  Orc3.h  Samurai.h  SamuraiCommander.h  Samurai_Archer.h  SmallDragon.h
src/: Animation.cpp  Game.cpp  GameOverState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  SettingsState.cpp  main.cpp
src/core/: Animation.cpp  Audio.cpp  Background.cpp  Button.cpp  Config.cpp  FindTarget.cpp  Game.cpp  HPBar.cpp  IEntity.cpp  Image.cpp  TextBox.cpp  Timer.cpp  Vector2.cpp
src/entities/: Arrow.cpp  Castle.cpp  Demon.cpp  Dragon.cpp  FindTarget.cpp  FireAttack.cpp  FireAttackS.cpp  IEntity.cpp  Jinn.cpp  Lizard.cpp  Medusa.cpp  Orc1.cpp  Orc2.cpp  Orc3.cpp  Samurai.cpp  SamuraiCommander.cpp  Samurai_Archer.cpp  SmallDragon.cpp
(+118 files in other folders)
